--- a/ProjektSemestrIV/App.xaml
+++ b/ProjektSemestrIV/App.xaml
@@ -21,6 +21,9 @@
         <DataTemplate DataType="{x:Type viewmodels:EditStagesViewModel}">
             <views:EditStagesView/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodels:ShowShooterOnStageViewModel}">
+            <views:ShowShooterOnStageView/>
+        </DataTemplate>
         <DataTemplate DataType="{x:Type viewmodels:ShowCompetitionsViewModel}">
             <views:ShowCompetitionsView/>
         </DataTemplate>
