--- a/ProjektSemestrIV/Views/EditScoreView.xaml
+++ b/ProjektSemestrIV/Views/EditScoreView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ProjektSemestrIV.Views.EditScoreView"
+﻿<Page x:Class="ProjektSemestrIV.Views.EditScoreView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -129,4 +129,4 @@
         
         
     </Grid>
-</UserControl>
+</Page>
