--- a/ProjektSemestrIV/Views/ConnectionView.xaml
+++ b/ProjektSemestrIV/Views/ConnectionView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ProjektSemestrIV.Views.ConnectionView"
+﻿<Page x:Class="ProjektSemestrIV.Views.ConnectionView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -86,4 +86,4 @@
         />
         
     </Grid>
-</UserControl>
+</Page>
