--- a/ProjektSemestrIV/Views/EditCompetitionsView.xaml
+++ b/ProjektSemestrIV/Views/EditCompetitionsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ProjektSemestrIV.Views.EditCompetitionsView"
+﻿<Page x:Class="ProjektSemestrIV.Views.EditCompetitionsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -116,4 +116,4 @@
 
     </Grid>
 
-</UserControl>
+</Page>
