--- a/ProjektSemestrIV/Views/EditShootersView.xaml
+++ b/ProjektSemestrIV/Views/EditShootersView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ProjektSemestrIV.Views.EditShootersView"
+﻿<Page x:Class="ProjektSemestrIV.Views.EditShootersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -104,4 +104,4 @@
                 Command="{Binding DeleteShooter, Mode=OneWay}"/>
         </Grid>
     </Grid>
-</UserControl>
+</Page>
