--- a/ProjektSemestrIV/Views/ShowSelectedCompetitionView.xaml
+++ b/ProjektSemestrIV/Views/ShowSelectedCompetitionView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ProjektSemestrIV.Views.ShowSelectedCompetitionView"
+﻿<Page x:Class="ProjektSemestrIV.Views.ShowSelectedCompetitionView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -85,4 +85,4 @@
             </DataGrid>
         </TabItem>
     </TabControl>
-</UserControl>
+</Page>
