--- a/ProjektSemestrIV/Views/ShowSelectedShooterInCompetition.xaml
+++ b/ProjektSemestrIV/Views/ShowSelectedShooterInCompetition.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ProjektSemestrIV.Views.ShowSelectedShooterInCompetition"
+﻿<Page x:Class="ProjektSemestrIV.Views.ShowSelectedShooterInCompetition"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -68,4 +68,4 @@
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
-</UserControl>
+</Page>
