--- a/ProjektSemestrIV/Views/ShowSelectedShooterView.xaml
+++ b/ProjektSemestrIV/Views/ShowSelectedShooterView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ProjektSemestrIV.Views.SelectedShooterView"
+﻿<Page x:Class="ProjektSemestrIV.Views.SelectedShooterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -61,4 +61,4 @@
             </i:Interaction.Triggers>
         </DataGrid>
     </StackPanel>
-</UserControl>
+</Page>
