--- a/ProjektSemestrIV/Views/ShowShootersView.xaml
+++ b/ProjektSemestrIV/Views/ShowShootersView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ProjektSemestrIV.Views.ShowShootersView"
+﻿<Page x:Class="ProjektSemestrIV.Views.ShowShootersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -25,4 +25,4 @@
             </i:Interaction.Triggers>
         </DataGrid>
     </StackPanel>
-</UserControl>
+</Page>
