--- a/ProjektSemestrIV/Views/EditScoreView.xaml
+++ b/ProjektSemestrIV/Views/EditScoreView.xaml
@@ -23,7 +23,7 @@
         </Grid.RowDefinitions>
         
         <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5"
-               Content="Score Editing" FontSize="30"/>
+               Content="{Binding Source={x:Static resx:Resources.EditRun}}" FontSize="30"/>
 
         <Grid Grid.Row="1" Grid.Column="0">
             <Grid.ColumnDefinitions>
@@ -46,13 +46,13 @@
                 SelectedIndex="{Binding SelectedTargetIndex, Mode=OneWayToSource}">
 
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="A" Binding="{Binding Alpha}"/>
-                    <DataGridTextColumn Header="C" Binding="{Binding Charlie}"/>
-                    <DataGridTextColumn Header="D" Binding="{Binding Delta}"/>
-                    <DataGridTextColumn Header="MISS" Binding="{Binding Miss}"/>
-                    <DataGridTextColumn Header="N-S" Binding="{Binding NoShoot}"/>
-                    <DataGridTextColumn Header="Proc" Binding="{Binding Procedure}"/>
-                    <DataGridTextColumn Header="Xtra" Binding="{Binding Extra}"/>
+                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Alpha}}" Binding="{Binding Alpha}"/>
+                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Charlie}}" Binding="{Binding Charlie}"/>
+                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Charlie}}" Binding="{Binding Delta}"/>
+                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Miss}}" Binding="{Binding Miss}"/>
+                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.NoShoot}}" Binding="{Binding NoShoot}"/>
+                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Procedure}}" Binding="{Binding Procedure}"/>
+                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Extra}}" Binding="{Binding Extra}"/>
                 </DataGrid.Columns>
             </DataGrid>
 
@@ -72,13 +72,13 @@
                     <RowDefinition Height="1*"/>
                 </Grid.RowDefinitions>
 
-                <Label Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Content="A"/>
-                <Label Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" Content="C"/>
-                <Label Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" Content="D"/>
-                <Label Grid.Row="0" Grid.Column="3" HorizontalAlignment="Center" Content="MISS"/>
-                <Label Grid.Row="0" Grid.Column="4" HorizontalAlignment="Center" Content="N-S"/>
-                <Label Grid.Row="0" Grid.Column="5" HorizontalAlignment="Center" Content="Proc"/>
-                <Label Grid.Row="0" Grid.Column="6" HorizontalAlignment="Center" Content="Xtra"/>
+                <Label Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Content="{Binding Source={x:Static resx:Resources.Alpha}}"/>
+                <Label Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" Content="{Binding Source={x:Static resx:Resources.Charlie}}"/>
+                <Label Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" Content="{Binding Source={x:Static resx:Resources.Delta}}"/>
+                <Label Grid.Row="0" Grid.Column="3" HorizontalAlignment="Center" Content="{Binding Source={x:Static resx:Resources.Miss}}"/>
+                <Label Grid.Row="0" Grid.Column="4" HorizontalAlignment="Center" Content="{Binding Source={x:Static resx:Resources.NoShoot}}"/>
+                <Label Grid.Row="0" Grid.Column="5" HorizontalAlignment="Center" Content="{Binding Source={x:Static resx:Resources.Procedure}}"/>
+                <Label Grid.Row="0" Grid.Column="6" HorizontalAlignment="Center" Content="{Binding Source={x:Static resx:Resources.Extra}}"/>
 
                 <TextBox Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" Text="{Binding Alpha, Mode=TwoWay}"/>
                 <TextBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Text="{Binding Charlie, Mode=TwoWay}"/>
@@ -98,11 +98,11 @@
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Row="0" Grid.Column="0" Content="Add" Command="{Binding AddTarget}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                <Button Grid.Row="0" Grid.Column="1" Content="Ok" Command="{Binding ConfirmTargetEdit}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                <Button Grid.Row="0" Grid.Column="2" Content="Edit" Command="{Binding EditTarget}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                <Button Grid.Row="0" Grid.Column="3" Content="Delete" Command="{Binding DeleteTarget}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                <Button Grid.Row="0" Grid.Column="4" Content="Save" Command="{Binding SaveRun}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <Button Grid.Row="0" Grid.Column="0" Content="{Binding Source={x:Static resx:Resources.Add}}" Command="{Binding AddTarget}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <Button Grid.Row="0" Grid.Column="1" Content="{Binding Source={x:Static resx:Resources.Ok}}" Command="{Binding ConfirmTargetEdit}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <Button Grid.Row="0" Grid.Column="2" Content="{Binding Source={x:Static resx:Resources.Edit}}" Command="{Binding EditTarget}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <Button Grid.Row="0" Grid.Column="3" Content="{Binding Source={x:Static resx:Resources.Delete}}" Command="{Binding DeleteTarget}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <Button Grid.Row="0" Grid.Column="4" Content="{Binding Source={x:Static resx:Resources.Save}}" Command="{Binding SaveRun}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             </Grid>
 
             <Grid Grid.Row="3" Grid.Column="0">
@@ -117,9 +117,9 @@
                     <RowDefinition Height="1*"/>
                 </Grid.RowDefinitions>
 
-                <Label Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Content="Time"/>
-                <Label Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" Content="Shooterid"/>
-                <Label Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" Content="Stageid"/>
+                <Label Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Content="{Binding Source={x:Static resx:Resources.Time}}"/>
+                <Label Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" Content="{Binding Source={x:Static resx:Resources.ShooterID}}"/>
+                <Label Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" Content="{Binding Source={x:Static resx:Resources.StageID}}"/>
 
                 <TextBox Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" Text="{Binding Time, Mode=TwoWay}"/>
                 <TextBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" IsEnabled="{Binding ShooterIdIsEnabled}" Text="{Binding Shooter_id, Mode=TwoWay}"/>
