--- a/ProjektSemestrIV/Views/EditStagesView.xaml
+++ b/ProjektSemestrIV/Views/EditStagesView.xaml
@@ -22,7 +22,7 @@
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" 
-               Content="Edytowanie tras" FontSize="30"/>
+               Content="{Binding Source={x:Static resx:Resources.EditStage}}" FontSize="30"/>
 
         <Grid Grid.Row="1" Grid.Column="0">
             <Grid.ColumnDefinitions>
