--- a/ProjektSemestrIV/Views/ShowCompetitionsView.xaml
+++ b/ProjektSemestrIV/Views/ShowCompetitionsView.xaml
@@ -9,6 +9,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
+        <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5"
+               Content="{Binding Source={x:Static resx:Resources.ListCompetition}}" FontSize="30"/>
+        
         <DataGrid x:Name="DataGridCompetitions" ItemsSource="{Binding Competitions}" 
                   AlternatingRowBackground="Lavender" GridLinesVisibility="None" 
                   IsReadOnly="True" AutoGenerateColumns="False"
