--- a/ProjektSemestrIV/Views/ShowSelectedShooterView.xaml
+++ b/ProjektSemestrIV/Views/ShowSelectedShooterView.xaml
@@ -8,6 +8,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
+        <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5"
+               Content="{Binding Source={x:Static resx:Resources.ShooterSummary}}" FontSize="30"/>
+        
         <StackPanel Orientation="Horizontal">
             <Label Content="{Binding Source={x:Static resx:Resources.ShooterName}}"/>
             <Label Content="{Binding Name}"/>
