--- a/ProjektSemestrIV/Views/ShowShooterOnStageView.xaml
+++ b/ProjektSemestrIV/Views/ShowShooterOnStageView.xaml
@@ -9,6 +9,9 @@
              d:DesignHeight="450" d:DesignWidth="800"
              Background="White">
     <StackPanel>
+        <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5"
+               Content="{Binding Source={x:Static resx:Resources.ShooterOnStageSummary}}" FontSize="30"/>
+        
         <StackPanel Orientation="Horizontal">
             <Label Content="{Binding Source={x:Static resx:Resources.ShooterName}}"/>
             <Label Content="{Binding Name}"/>
