--- a/ProjektSemestrIV/Views/EditCompetitionsView.xaml
+++ b/ProjektSemestrIV/Views/EditCompetitionsView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:resx="clr-namespace:ProjektSemestrIV.Properties"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:local="clr-namespace:ProjektSemestrIV.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
@@ -43,23 +44,24 @@
             <Label Grid.Row="0" Grid.Column="0" Content="{Binding Source={x:Static resx:Resources.Location}}"/>
             <TextBox
                 Grid.Row="0" Grid.Column="1"
-                x:Name="TextBoxShooterName" x:FieldModifier="private"
+                x:Name="TextBoxLocation" x:FieldModifier="private"
                 VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
                 Text="{Binding Location, Mode=TwoWay}"/>
 
             <Label Grid.Row="1" Grid.Column="0" Content="{Binding Source={x:Static resx:Resources.StartDate}}"/>
-            <TextBox
-                Grid.Row="1" Grid.Column="1" 
-                x:Name="TextBoxShooterSurname" x:FieldModifier="private"
+            <xctk:DateTimePicker
+                Grid.Row="1" Grid.Column="1"
+                x:Name="StartDate" x:FieldModifier="private"
                 VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
-                Text="{Binding StartDate, Mode=TwoWay}"/>
+                
+                Value="{Binding StartDate, Mode=TwoWay}"/>
 
             <Label Grid.Row="2" Grid.Column="0" Content="{Binding Source={x:Static resx:Resources.EndDate}}"/>
-            <TextBox
+            <xctk:DateTimePicker
                 Grid.Row="2" Grid.Column="1" 
-                x:Name="TextBox" x:FieldModifier="private"
+                x:Name="EndDate" x:FieldModifier="private"
                 VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
-                Text="{Binding EndDate, Mode=TwoWay}"/>
+                Value="{Binding EndDate, Mode=TwoWay}"/>
 
             <Button
                 Grid.Row="4" Grid.Column="1" 
