--- a/ProjektSemestrIV/Views/EditScoreView.xaml
+++ b/ProjektSemestrIV/Views/EditScoreView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:resx="clr-namespace:ProjektSemestrIV.Properties"
              xmlns:local="clr-namespace:ProjektSemestrIV.Views"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Background="White">
@@ -121,12 +122,45 @@
                 <Label Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" Content="{Binding Source={x:Static resx:Resources.ShooterID}}"/>
                 <Label Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" Content="{Binding Source={x:Static resx:Resources.StageID}}"/>
 
-                <TextBox Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" Text="{Binding Time, Mode=TwoWay}"/>
+                <xctk:MaskedTextBox Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" Text="{Binding Time, Mode=TwoWay}" Mask="00:00:00.000"/>
                 <TextBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" IsEnabled="{Binding ShooterIdIsEnabled}" Text="{Binding Shooter_id, Mode=TwoWay}"/>
                 <TextBox Grid.Row="1" Grid.Column="2" HorizontalAlignment="Stretch" IsEnabled="{Binding StageIdIsEnabled}" Text="{Binding Stage_id, Mode=TwoWay}"/>
             </Grid>
         </Grid>
+
+        <GridSplitter Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch"/>
+
+        <DataGrid 
+                Grid.Row="1" Grid.Column="2"
+                x:Name="DataGridCompetitions" x:FieldModifier="private"
+                AutoGenerateColumns="False" AlternatingRowBackground="Lavender" GridLinesVisibility="None" IsReadOnly="True"
+                ItemsSource="{Binding Competitions, Mode=OneWay}"
+                SelectedItem="{Binding SelectedCompetition, Mode=OneWayToSource}">
+
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Id}}" Binding="{Binding Id}"/>
+                <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Location}}" Binding="{Binding Location}"/>
+                <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.StartDate}}" Binding="{Binding StartDate}"/>
+                <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.EndDate}}" Binding="{Binding EndDate}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <GridSplitter Grid.Row="1" Grid.Column="3" HorizontalAlignment="Stretch"/>
         
-        
+        <DataGrid 
+                Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="2" 
+                x:Name="DataGridStages" x:FieldModifier="private"
+                AutoGenerateColumns="False" AlternatingRowBackground="Lavender" GridLinesVisibility="None" IsReadOnly="True"
+                ItemsSource="{Binding Stages, Mode=OneWay}"
+                SelectedItem="{Binding SelectedStage, Mode=OneWayToSource}"
+                SelectedIndex="{Binding SelectedStageIndex, Mode=OneWayToSource}">
+
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Id}}" Binding="{Binding ID}"/>
+                <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.IdCompetition}}" Binding="{Binding Competition_ID}"/>
+                <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Name}}" Binding="{Binding Name}"/>
+                <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Rules}}" Binding="{Binding Rules}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Page>
