--- a/ProjektSemestrIV/Views/EditCompetitionsView.xaml
+++ b/ProjektSemestrIV/Views/EditCompetitionsView.xaml
@@ -46,7 +46,7 @@
                 Grid.Row="0" Grid.Column="1"
                 x:Name="TextBoxLocation" x:FieldModifier="private"
                 VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
-                Text="{Binding Location, Mode=TwoWay}"/>
+                Text="{Binding Location, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Label Grid.Row="1" Grid.Column="0" Content="{Binding Source={x:Static resx:Resources.StartDate}}"/>
             <xctk:DateTimePicker
@@ -54,14 +54,14 @@
                 x:Name="StartDate" x:FieldModifier="private"
                 VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
                 
-                Value="{Binding StartDate, Mode=TwoWay}"/>
+                Value="{Binding StartDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Label Grid.Row="2" Grid.Column="0" Content="{Binding Source={x:Static resx:Resources.EndDate}}"/>
             <xctk:DateTimePicker
                 Grid.Row="2" Grid.Column="1" 
                 x:Name="EndDate" x:FieldModifier="private"
                 VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
-                Value="{Binding EndDate, Mode=TwoWay}"/>
+                Value="{Binding EndDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Button
                 Grid.Row="4" Grid.Column="1" 
