--- a/ProjektSemestrIV/Views/EditCompetitionsView.xaml
+++ b/ProjektSemestrIV/Views/EditCompetitionsView.xaml
@@ -12,8 +12,8 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -24,7 +24,7 @@
         <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
                Content="{Binding Source={x:Static resx:Resources.EditCompetition}}" FontSize="30"/>
 
-        <Grid Grid.Row="1" Grid.Column="0">
+        <Grid Grid.Row="1" Grid.Column="0" Margin="0,0,10,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="*"/>
@@ -45,22 +45,21 @@
             <TextBox
                 Grid.Row="0" Grid.Column="1"
                 x:Name="TextBoxLocation" x:FieldModifier="private"
-                VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
+                VerticalAlignment="Center"
                 Text="{Binding Location, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Label Grid.Row="1" Grid.Column="0" Content="{Binding Source={x:Static resx:Resources.StartDate}}"/>
             <xctk:DateTimePicker
                 Grid.Row="1" Grid.Column="1"
                 x:Name="StartDate" x:FieldModifier="private"
-                VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
-                
+                VerticalAlignment="Center" TextAlignment="Left"
                 Value="{Binding StartDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Label Grid.Row="2" Grid.Column="0" Content="{Binding Source={x:Static resx:Resources.EndDate}}"/>
             <xctk:DateTimePicker
                 Grid.Row="2" Grid.Column="1" 
                 x:Name="EndDate" x:FieldModifier="private"
-                VerticalAlignment="Center" HorizontalAlignment="Left" Width="100"
+                VerticalAlignment="Center" TextAlignment="Left"
                 Value="{Binding EndDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Button
@@ -115,7 +114,5 @@
                 HorizontalAlignment="Center" Width="50" Margin="10" Content="{Binding Source={x:Static resx:Resources.Delete}}" 
                 Command="{Binding DeleteCompetition, Mode=OneWay}"/>
         </Grid>
-
     </Grid>
-
 </Page>
